# ohtu-2021-viikko2

poetry-web/: pyproject.toml
project-reader/: pyproject.toml
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/: pyproject.toml
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  kirjanpito.py  pankki.py  varasto.py
