[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Jukka Aho <ahojukka5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
